tests/ui/missing_rest_of_path.stderr
error: expected identifier at the end
 --> tests/ui/missing_rest_of_path.rs:4:13
  |
4 | type X<T> = Path!(foo.bar);
  |             ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `Path` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0091]: type parameter `T` is never used
 --> tests/ui/missing_rest_of_path.rs:4:8
  |
4 | type X<T> = Path!(foo.bar);
  |        ^ unused type parameter
  |
  = help: consider removing `T` or referring to it in the body of the type alias
  = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead
