tests/ui/missing_rest_of_path.rs
use serde_cursor::Path;

// expected to see "+ T"
type X<T> = Path!(foo.bar);

fn main() {}
